# vqm_ps

./: .env.copy  .gitignore  CLAUDE.md  Flow.md  README.md  VQMS Dashboard _standalone_.html  langgraph.json  main.py  pyproject.toml  requirements.txt  run_reviewer_mcp.py
.langgraph_api/: .langgraph_ops.pckl
app/: __init__.py  factory.py  lifespan.py  middleware.py  routes.py
audit/: VQMS_Audit_Report_2026-04-16.md
config/: s3_paths.py  settings.py
docs/: Technical_guide.md  VQMS_ASCII_Flow_Diagrams_All_Three_Paths.md  VQMS_Logic_Flow.md  api.md  api_testing_guide.md  architecture.md  detailed_technical_guide.md  langgraph_explained.md  system_flow_guide.md
frontend/: README.md  angular.json  package-lock.json  package.json
notebooks/: mcp.ipynb
scripts/: check_aws.py  check_aws_access.py  check_bedrock.py  check_db.py  check_db_connection.py  check_email_poller.py  check_embedding.py  check_frontend_api_contract.py  check_graphapi.py  check_iam_permissions.py  check_new_and_unread_mails.py  check_pipeline_artifacts.py  check_s3_access.py  check_servicenow.py  check_servicenow_new_creds.py  check_textract.py  check_thread_correlation.py  describe_vendor_account.py  diagnose_email_delivery.py  find_sn_field.py  find_vqms_tickets.py  inspect_ticket.py  list_unread_emails.py  mark_unread_mails_read.py  run_email_to_analysis.py  run_email_to_quality_gate.py  run_migrations.py  run_pipeline_to_quality_gate.py  seed_admin_user.py  seed_knowledge_base.py  seed_triage_past_cases.py  smoke_test_email_intake.py  strip_docs.py  test_email_ingestion.py  test_portal_submission.py  verify_vendor_category_flow.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_acknowledgment.py  test_admin_email.py  test_admin_overview.py  test_auto_close_scheduler.py  test_bedrock.py  test_closure_service.py  test_connectors.py  (+31 more)
(+438 files in other folders)
